--- a/design/css/frame.css
+++ b/design/css/frame.css
@@ -173,3 +173,14 @@ padding-bottom: 15px;
 text-indent: 15px;
 z-index: 105;
 }
+
+/*plugin options*/
+div.plugin_options {
+padding: 5px;
+}
+
+span.plugin_link {
+padding: 5px;
+color: #096eb6;
+cursor: pointer;
+}
